--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
 name: 'action-docker-release'
 author: '11notes'
-description: 'This action will create a RELEASE.md based on commits and their attributes'
+description: 'This action will create a RELEASE.md based on commits and their attributes.'
 branding:
   icon: 'book-open'
   color: 'blue'
