--- a/action.yml
+++ b/action.yml
@@ -1,9 +1,9 @@
 name: 'action-docker-release'
 author: '11notes'
-description: 'This action will create a RELEASE.md based on commits and their attributes.'
+description: 'This action will create release markdown based on commits and their attributes.'
 branding:
-  icon: 'book-open'
-  color: 'blue'
+  icon: 'award'
+  color: 'purple'
 inputs:
   git_log: 
     description: 'git log of commits to check'
